--- a/ios/SplitIt.xcodeproj/xcshareddata/xcschemes/SplitIt.xcscheme
+++ b/ios/SplitIt.xcodeproj/xcshareddata/xcschemes/SplitIt.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "VideoSplitter.app"
-               BlueprintName = "VideoSplitter"
-               ReferencedContainer = "container:VideoSplitter.xcodeproj">
+               BuildableName = "SplitIt.app"
+               BlueprintName = "SplitIt"
+               ReferencedContainer = "container:SplitIt.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "VideoSplitterTests.xctest"
-               BlueprintName = "VideoSplitterTests"
-               ReferencedContainer = "container:VideoSplitter.xcodeproj">
+               BuildableName = "SplitItTests.xctest"
+               BlueprintName = "SplitItTests"
+               ReferencedContainer = "container:SplitIt.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "VideoSplitter.app"
-            BlueprintName = "VideoSplitter"
-            ReferencedContainer = "container:VideoSplitter.xcodeproj">
+            BuildableName = "SplitIt.app"
+            BlueprintName = "SplitIt"
+            ReferencedContainer = "container:SplitIt.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "VideoSplitter.app"
-            BlueprintName = "VideoSplitter"
-            ReferencedContainer = "container:VideoSplitter.xcodeproj">
+            BuildableName = "SplitIt.app"
+            BlueprintName = "SplitIt"
+            ReferencedContainer = "container:SplitIt.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
