--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 
-target 'VideoSplitter' do
+target 'SplitIt' do
   config = use_native_modules!
 
   use_react_native!(
@@ -12,7 +12,7 @@ target 'VideoSplitter' do
     :hermes_enabled => false
   )
 
-  target 'VideoSplitterTests' do
+  target 'SplitItTests' do
     inherit! :complete
     # Pods for testing
   end
